iis: update web.config to increase max url length

--- a/wwwroot/web.config
+++ b/wwwroot/web.config
@@ -8,5 +8,10 @@
 			processPath="%SystemRoot%\System32\WindowsPowerShell\v1.0\powershell.exe" 
 			arguments="%home%\site\wwwroot\HttpPlatformHandlerStartup.ps1"> 
         </httpPlatform>
+	<security>
+		<requestFiltering>
+		<requestLimits maxQueryString="10000" />
+		</requestFiltering>
+	</security>
     </system.webServer>
 </configuration>
